size fixes on iphone

--- a/styles/header-mini.css
+++ b/styles/header-mini.css
@@ -79,7 +79,8 @@
             }
 
             #kf-nav-links {
-                padding-top:    0.7rem;
+                padding-top:        0;
+                padding-bottom:     0.4rem;
             }
     }
 
